# Project-Protei-

./: Makefile  README.md  config-ide.yaml  config-ideology.yaml  config-node.yaml  config.yaml  pyproject.toml
agi_protei/: __init__.py  cli.py  client.py  completions.py  orchestrator.py  plugin_protocol.py  plugins.py
agi_protei.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agi_protei/modules/: __init__.py
agi_protei/modules/gamedev/: __init__.py  module.py
agi_protei/modules/ide/: __init__.py  module.py
agi_protei/modules/ideological_communist/: __init__.py  module.py
agi_protei/modules/space/: __init__.py  module.py
agi_protei/plugins/: ide.py  ideology.py  pytools.py
docs/: README.md
docs/api/: README.md  client.md  core.md  server.md
docs/examples/: README.md  embeddings.md  ide.md  ideology.md  node-basic.md  python-basic.md  streaming.md
docs/guides/: authentication.md  best-practices.md  quickstart.md  usage.md
docs/templates/: issue_template.md  pull_request_template.md
plugins/node/: basic.js
