[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-protei"
version = "0.1.0"
description = "AGI Protei: multi-language plugin orchestrator"
authors = [{ name = "AGI Protei" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
agi-protei = "agi_protei.cli:main"

[project.optional-dependencies]
config = [
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agi_protei*"]
