[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-protei"
version = "0.1.0"
description = "AGI Protei Python SDK (experimental) with plugin architecture and modules"
authors = [{name = "Project Protei Team"}]
license = {text = "LGPL-2.1-or-later"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://project-protei.com"
Repository = "https://github.com/Starframes98866/Project-Protei-"

[tool.setuptools.package-data]
"agi_protei" = ["py.typed"]

[tool.setuptools]
packages = ["agi_protei", "agi_protei.modules", "agi_protei.modules.ide", "agi_protei.modules.ideological_communist"]
